# flatbuffers

./: .gitlab-ci.yml
.github/workflows/: mirror.yml
rust/flatbuffers/: Cargo.toml
rust/flatbuffers/src/: builder.rs  endian_scalar.rs  follow.rs  lib.rs  primitives.rs  push.rs  vector.rs  vtable_writer.rs
rust/flatbuffers/src/builder/: heapless_vec.rs  mod.rs  vec.rs
samples/: monster_generated.rs
src/: idl_gen_rust.cpp
tests/: monster_test_generated.rs  optional_scalars2_generated.rs
tests/include_test/: include_test1_generated.rs
tests/include_test/sub/: include_test2_generated.rs
tests/namespace_test/: namespace_test1_generated.rs  namespace_test2_generated.rs
tests/rust_usage_test/benches/: flatbuffers_benchmarks.rs
tests/rust_usage_test/tests/: integration_test.rs  no_std_test.rs  optional_scalars_test.rs
