[package]
name = "flatbuffers"
version = "0.6.3"
edition = "2018"
authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers"]
license = "Apache-2.0"
description = "Official FlatBuffers Rust runtime library."
homepage = "https://google.github.io/flatbuffers/"
repository = "https://github.com/google/flatbuffers"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]

[dependencies]
heapless = { package = "heapless", version = "0.7.1" }
as-slice = "0.1.4"

[features]
default = ["std"]
std = []
alloc = []
