[package]
name = "flatbuffers"
version = "0.7.0"
edition = "2021"
authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers"]
license = "Apache-2.0"
description = "Official FlatBuffers Rust runtime library."
homepage = "https://google.github.io/flatbuffers/"
repository = "https://github.com/google/flatbuffers"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]

[dependencies]
heapless = { package = "heapless", version = "0.7.1" }

[features]
default = ["std"]
std = []
alloc = []
